# packages/core/src/routes/experience/secret-routes.openapi.json
@@ -1,10 +1,4 @@
 {
-  "tags": [
-    {
-      "name": "Experience secret",
-      "description": "Secret management for zero-knowledge encryption in user experience."
-    }
-  ],
   "paths": {
     "/api/experience/secret/user": {
       "put": {
